# spin-variables

./: .gitignore  Cargo.toml  README.md  spin-pluginify.toml
src/: env_provider.rs  main.rs
