[package]
name = "variables"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
comfy-table = "7.1.1"
spin-common = { git = "https://github.com/fermyon/spin", branch = "v2.7" }
spin-locked-app = { git = "https://github.com/fermyon/spin", branch = "v2.7" }
spin-manifest = { git = "https://github.com/fermyon/spin", branch = "v2.7" }
spin-oci = { git = "https://github.com/fermyon/spin", branch = "v2.7" }
spin-serde = { git = "https://github.com/fermyon/spin", branch = "v2.7" }
tempfile = "3.12.0"
tokio = "1.40.0"
